# project2

./: CMakeLists.txt  Makefile  README.md  functions.cpp  functions.h  launch.json  main.cpp  person.h  student.cpp  student.h  tasks.json
datafiles/: kursiokai.txt
html/: annotated.html  class_person-members.html  class_person.html  class_student-members.html  class_student.html  classes.html  doxygen_crawl.html  files.html  functions_8h_source.html  hierarchy.html  md__r_e_a_d_m_e.html  pages.html  person_8h_source.html  student_8h_source.html
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  searchdata.js
